--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <p><button type="submit" value="Procesar">ENVIAR</button></p>
         </form>
     <mi-footer></mi-footer>
-    <script  type="text/javascript" src="js/js.js">
+    <script  type="text/javascript" src="js/script.js">
         </script>
     </body>
 </html>
