--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
 			<input type="date" name="Fecha" id="Fecha" required>
 		    <output id="salida_fecha"></output>
             </p>
+		<p><p><button type="submit" value="Registro">REGISTRATE</button></p></p>
+		
+		
+		
             <p><button type="submit" value="Procesar">ENVIAR</button></p>
         </form>
     <mi-footer></mi-footer>
