--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<input type="date" name="Fecha" id="Fecha" required>
 		    <output id="salida_fecha"></output>
             </p>
-		<p><p><button type="submit" value="Registro">REGISTRATE</button></p></p>
+		<p> <a href="registro.html">¡Registrate!</a> </p>
 		
 		
 		
